typo in README ("requirement")

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Netsoc server setup scripts
 PLEASE NOTE!
 ******************************************************************
 For code that runs a public service or people interact with, i definitely
-agree that proper/standardised methods are a reuirement however 
+agree that proper/standardised methods are a requirement however 
 these scripts are supposed to be quick hackjobs that only we run
 These scripts are hackish and nasty and are guaranteed to make you
 cry. Please don't take this as an indication of how we normally code
