--- a/README
+++ b/README
@@ -18,12 +18,18 @@ These are scripts to setup services/daemons/whatever
 
 List of services 
 
+Finished:
+
+
 Workong on:
 *ssh server 
 *ldap client (libpam-ldapd)
 *ldap server
+*web-forum
+*web-wordpress
 
 Planned:
+*web-wiki
 
 *dns server
 *client program groups
